--- a/Task1_Marketplace.csproj
+++ b/Task1_Marketplace.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\guards\auth-guard.ts" />
     <None Remove="ClientApp\src\app\interceptors\auth-interceptor.ts" />
+    <None Remove="ClientApp\src\app\models\Product.ts" />
     <None Remove="ClientApp\src\app\models\Response.ts" />
     <None Remove="ClientApp\src\app\models\UserClaim.ts" />
     <None Remove="ClientApp\src\app\services\AuthService.ts" />
@@ -32,6 +33,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\guards\auth-guard.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\interceptors\auth-interceptor.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\Product.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\Response.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
