--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,13 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Database": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "Task1_Marketplace",
+    "Collections": {
+      "Users": "Users",
+      "Products":  "Products"
+    }
   }
 }
