--- a/Task1_Marketplace.csproj
+++ b/Task1_Marketplace.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\guards\auth-guard.ts" />
     <None Remove="ClientApp\src\app\interceptors\auth-interceptor.ts" />
+    <None Remove="ClientApp\src\app\models\CreateProduct.ts" />
     <None Remove="ClientApp\src\app\models\Product.ts" />
     <None Remove="ClientApp\src\app\models\Response.ts" />
     <None Remove="ClientApp\src\app\models\UserClaim.ts" />
@@ -35,6 +36,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\guards\auth-guard.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\interceptors\auth-interceptor.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\CreateProduct.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\Product.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\Response.ts">
       <SubType>Code</SubType>
