--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.1.5",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
+    "ngx-cookieconsent": "^4.0.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -46,6 +47,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
