--- a/Task1_Marketplace.csproj
+++ b/Task1_Marketplace.csproj
@@ -24,17 +24,20 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\guards\auth-guard.ts" />
+    <None Remove="ClientApp\src\app\guards\page-visit-tracker-interceptor.ts" />
     <None Remove="ClientApp\src\app\interceptors\auth-interceptor.ts" />
     <None Remove="ClientApp\src\app\models\CreateProduct.ts" />
     <None Remove="ClientApp\src\app\models\Product.ts" />
     <None Remove="ClientApp\src\app\models\Response.ts" />
     <None Remove="ClientApp\src\app\models\UserClaim.ts" />
     <None Remove="ClientApp\src\app\services\AuthService.ts" />
+    <None Remove="ClientApp\src\app\services\PageVisitrackerService.ts" />
     <None Remove="ClientApp\src\app\services\ProductService.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\guards\auth-guard.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\guards\page-visit-tracker-interceptor.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\interceptors\auth-interceptor.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\CreateProduct.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\Product.ts" />
@@ -43,6 +46,7 @@
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\models\UserClaim.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\AuthService.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\PageVisitrackerService.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\ProductService.ts" />
   </ItemGroup>
 
